@@ -1,8 +1,13 @@
+2000-11-25  Max Horn  <max@quendi.de>
+	* files/utils.cc: changed path_map to be a map of strings instead of a hash_map of char*
+	* files/utils.cc: made sure functions are named like some_noun
+	* files/utils.cc: get_system_path now implicitly calls switch_slashes
+	* changed most uses of char* to string
+
 2000-11-25  Dancer Vesperman <dancer@users.sourceforge.net>
 	* audio/Audio.cc: Don't call SDL::CloseAudio(). Bad things seem to happen in there.
 
 2000-11-24  Jeff Freedman  <jeff@amy.nerble.net>
-
 	* Write out correct count for 'monsnpcs.dat'.
 
 2000-11-25  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
